blind fix for wallpaper circles being visible out of viewport on ios

--- a/src/components/AnimatedWallpaper/styles/AnimatedWallpaper.scss
+++ b/src/components/AnimatedWallpaper/styles/AnimatedWallpaper.scss
@@ -2,23 +2,28 @@
     position: fixed;
     width: 100%;
     height: 100%;
-    overflow: hidden;
 
-    .wallpaper-circle {
-        border-radius: 50%;
-        position: fixed;
-        height: 50vh;
-        aspect-ratio: 1 / 1;
-        animation-name: wallpaper-circle;
-        animation-duration: 12s;
-        animation-iteration-count: 1;
-        animation-timing-function: linear;
-        opacity: 0;
+    .wallpaper {
+        overflow: hidden;
+        width: 100%;
+        height: 100%;
 
-        --startX: 20vw;
-        --startY: 20vh;
-        --endX: 80vw;
-        --endY: 80vh;
+        .wallpaper-circle {
+            border-radius: 50%;
+            position: fixed;
+            height: 50vh;
+            aspect-ratio: 1 / 1;
+            animation-name: wallpaper-circle;
+            animation-duration: 12s;
+            animation-iteration-count: 1;
+            animation-timing-function: linear;
+            opacity: 0;
+
+            --startX: 20vw;
+            --startY: 20vh;
+            --endX: 80vw;
+            --endY: 80vh;
+        }
     }
 }
 
